Date	Added
12/2
        * Skill Updates [celest]
          - Modified Weapon Refine - should only +1 every time.
          - Updated Berserk, Chase Walk, Slim Pitcher
          - Added skill_range_leniency
        * Added check for clif.c in case the server didn't realise we've died [celest]

12/1
	- Make it build against gcc 2.95 [MouseJstr]
	- Changed #define MAX_PET_DB to 300, it's easier for people adding new pets like this. [Nas]
        * Skill Updates [celest]
          - Updated Poison React
          - Added Soul Change, Soul Burn
          - Added a somewhat crude timer for Venom splasher
          - Added a fix for Guild Skills causing crashes by Sara, thanks!

11/30
        * Fixed client crash when disguised characters die [celest]
        * Skill Updates [celest]
          - Fixed and finished Guild Skills (~90%)
          - Fixed Meltdown and Overthrust used together breaking your own weapon
          - Updated Weapon Repair :- uses different materials depending on repaired item
            (Iron Ore/Iron/Steel/Rough Oridecon)
          - Fixed sp recovery problem, thanks to OutSider for pointing it out
          - Updated Tiger Knuckle Fist stun time
          - Added cooldown time for Emergency Recall
          - Fixed typo in skill.c, thanks to Toster

11/29
	* Fixed crash in src/char_sql/char.c when setting chars offline [MouseJstr]
	* Added mapbug.txt which is displayed in map-server, displays
	  the last bug or w/e fixed for the map-server [MC Cameri]
	  -You may change it whenever you want
	  -It will only show if mapbug.txt exists
	  -This file must not be included in releases
	* Made some changes in map_versionscreen() to make it easier to
	  read/change in the source [MC Cameri]
	* Fixed a typo in _ShowMessage() removing the message caption. [MC Cameri]
	* Fixed typo in map_helpscreen() showing -h instead of --?. [MC Cameri]
        * Added more sc_data checks in skill.c and pc.c [celest]